Version 2.2.0
---------------------------------------------------------------------------------
7 October 2008
+ Fixed pain in the butt carousel display problem.

1 October 2008
+ Fixed multimedia popup
+ Added faster classify options
+ Updated: templates/classify_list.tpl

17 September 2008
+ Added commercial use message to readme for media player
+ Error check added to parse function.
+ Rewrote clip code for new clipboard functionality.

8 September 2008
+ Trying alternate clipboard option.
+ Classify looks in media types prior to documents now.
+ Different javascript link format in clear_file.
+ Updated: javascript/clear_file/body.js

13 August 2008
+ Downloaded documents now increment download count.
+ Document folder view shows how many times a document has been
  downloaded.
+ Switched sort headers over to new pager format.
+ Updated: templates/file_list.tpl

12 August 2008
+ Removed cropped from install.sql and added vertical and num_visible
  columns.
+ Changed admin links to icons.
+ Key is now deleted with folder.
+ mod_rewrite format changed over.
+ Update: templates/folder_list.tpl, templates/style.css, img/add.png


1 August 2008
+ added metacafe as embed type
+ Changed 'video' to 'media' in wording
+ Thumbnails of embeds prefixed with embed type to prevent overlap
+ Flickr renamed User since group ids do not work.

15 July 2008
+ Added patch #1939151 by Eloi George. Removed redundant code.
+ Added patch #1939146 by Eloi George. Adds setPlaceholderMaxWidth and
  setPlaceholderMaxHeight functions.

2 July 2008
+ confirm message restored to pick_file script.
+ Updated: javascript/pick_file/head.js

23 June 2008
+ Removed cropped column from file_assoc; not needed, file_type covers
  it
+ Storing carousel settings in file_assoc
+ Carousel settings can be made on file manager post
+ Image crop association deletes added to image delete
+ Added reference to media embedd function to allow functioning with
  php 4
+ jCarousel is default view in File Manager