@@ -1,5 +1,8 @@
 Version 2.2.0
 ---------------------------------------------------------------------------------
+8 October 2008
++ Made File_Assoc::parentLinked function a little more robust.
+
 7 October 2008
 + Fixed pain in the butt carousel display problem.
 
